chore: kotlin 1.6.20 update and other changes